include/dss_capi.h

    DSS_CAPI_DLL void YMatrix_GetCompressedYMatrix(uint16_t factor, uint32_t *nBus, uint32_t *nNz, int32_t **ColPtr, int32_t **RowIdxPtr, double **cValsPtr);
    DSS_CAPI_DLL void YMatrix_ZeroInjCurr(void);
    DSS_CAPI_DLL void YMatrix_GetSourceInjCurrents(void);
    DSS_CAPI_DLL void YMatrix_GetPCInjCurr(void);
    DSS_CAPI_DLL void YMatrix_BuildYMatrixD(int32_t BuildOps, int32_t AllocateVI);
    DSS_CAPI_DLL void YMatrix_AddInAuxCurrents(int32_t SType);
    DSS_CAPI_DLL void YMatrix_getIpointer(double **IvectorPtr);
    DSS_CAPI_DLL void YMatrix_getVpointer(double **VvectorPtr);
    DSS_CAPI_DLL int32_t YMatrix_SolveSystem(double *NodeVPtr);
    DSS_CAPI_DLL void YMatrix_Set_SystemYChanged(uint16_t arg);
    DSS_CAPI_DLL uint16_t YMatrix_Get_SystemYChanged(void);
    DSS_CAPI_DLL void YMatrix_Set_UseAuxCurrents(uint16_t arg);
    DSS_CAPI_DLL uint16_t YMatrix_Get_UseAuxCurrents(void);
    /*! 
    Update and return the convergence flag. Used for external solver loops.
    */
    DSS_CAPI_DLL uint16_t YMatrix_CheckConvergence(void);
    DSS_CAPI_DLL void YMatrix_SetGeneratordQdV(void);
    DSS_CAPI_DLL uint16_t YMatrix_Get_LoadsNeedUpdating(void);
    DSS_CAPI_DLL void YMatrix_Set_LoadsNeedUpdating(uint16_t Value);
    DSS_CAPI_DLL uint16_t YMatrix_Get_SolutionInitialized(void);
    DSS_CAPI_DLL void YMatrix_Set_SolutionInitialized(uint16_t Value);
    DSS_CAPI_DLL int32_t YMatrix_Get_Iteration(void);
    DSS_CAPI_DLL void YMatrix_Set_Iteration(int32_t Value);
    DSS_CAPI_DLL void *YMatrix_Get_Handle(void);